[package]
name = "openssl_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9"
base64ct = "1.6"
rand = "0.8"
openssl-sys = "0.9"
openssl = "0.10"

[[test]]
name = "rsa_unittest"
path = "src/rsa_unittest.rs"
